# agentic-data-analytics

./: .env.example  .gitignore  AGENTS.md  README.md  agent.py  agent_middleware.py  agent_middleware_test.py  agent_test.py  cli.py  config.py  config_test.py  langgraph.json  pyproject.toml  subagents.py
runtime/: modal_runtime.py  modal_runtime_test.py  workspace.py  workspace_test.py
skills/analyst_skills/analysis/: SKILL.md
skills/analyst_skills/analyst/: SKILL.md
skills/cleaner_skills/cleaner/: SKILL.md
skills/cleaner_skills/cleaning/: SKILL.md
skills/orchestrator_skills/orchestrator/: SKILL.md
skills/profiler_skills/profiler/: SKILL.md
skills/profiler_skills/profiling/: SKILL.md
tools/: code_executor.py  code_executor_test.py  modal_runtime.py  modal_runtime_test.py
