[project]
name = "agentic-data-analytics"
version = "0.1.0"
description = "Multi-subagent EDA workflow with Deep Agents in a sandboxed Modal VM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.1",
    "langchain>=1.3.0",
    "langchain-anthropic>=1.4.3",
    "langchain-google-genai>=4.2.2",
    "langchain-modal>=0.0.4",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "langgraph-cli[inmem]>=0.4.26",
    "modal>=1.4.3",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
    "ty>=0.0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]


[tool.ruff]
exclude = []
line-length = 100
target-version = "py312"

[tool.ruff.format]
exclude = []

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PT"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
